[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/avatars/avatar_04.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/gravity_theme.tres" type="Theme" id=2]
[ext_resource path="res://game/ui/hud/statline_stats/StatMisile.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ui/hud/statline_stats/StatPoints.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ui/hud/statline_stats/StatIconsWins.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/ui/hud/statline_stats/StatShocker.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/ui/hud/StatLine.gd" type="Script" id=7]
[ext_resource path="res://game/ui/hud/statline_stats/StatIconsLife.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/ui/hud/statline_stats/StatBullet.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/tilesets/tileset_hud.png" type="Texture" id=10]
[ext_resource path="res://game/ui/hud/statline_stats/StatGas.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 8, 8 )
margin = Rect2( -2, 0, 0, 0 )

[node name="StatLineRacer" type="VBoxContainer"]
margin_top = -3.0
margin_right = 40.0
margin_bottom = 82.0
theme = ExtResource( 2 )
custom_constants/separation = 8
script = ExtResource( 7 )

[node name="Avatar" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 16.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="PlayerLine" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )

[node name="PlayerName" type="Label" parent="PlayerLine"]
margin_right = 18.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "AXL"
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="GameoverLabel" type="Label" parent="PlayerLine"]
visible = false
margin_right = 95.0
margin_bottom = 13.0
text = "... ZATE JE KONEC!"
__meta__ = {
"_editor_description_": ""
}

[node name="WinLabel" type="Label" parent="PlayerLine"]
visible = false
margin_right = 95.0
margin_bottom = 13.0
text = "... ZMAGA!!!!!!"
__meta__ = {
"_editor_description_": ""
}

[node name="StatIconsWins" parent="." instance=ExtResource( 5 )]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 28.0

[node name="StatIconsLife" parent="." instance=ExtResource( 8 )]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 44.0
icon_texture = SubResource( 147 )

[node name="StatPoints" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 52.0
margin_right = 40.0
margin_bottom = 60.0

[node name="StatBullet" parent="." instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 68.0
margin_right = 40.0
margin_bottom = 76.0

[node name="StatMisile" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 84.0
margin_right = 40.0
margin_bottom = 92.0

[node name="StatShocker" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 100.0
margin_right = 40.0
margin_bottom = 108.0

[node name="StatGas" parent="." instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 116.0
margin_right = 40.0
margin_bottom = 124.0
